--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="counter_credit" />
+    <meta name="apple-mobile-web-app-title" content="Conecta" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
