--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <base href="$FLUTTER_BASE_HREF" />
-
+    <title>Conecta</title>
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
     <meta name="description" content="Simulação de credito" />
